@@ -4,7 +4,6 @@ Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: Andreas Henriksson <andreas@fatal.se>, Emilio Pozuelo Monfort <pochu@debian.org>, Iain Lane <laney@debian.org>, Michael Biebl <biebl@debian.org>
 Build-Depends: debhelper (>= 10),
-               cdbs (>= 0.4.93),
                gnome-pkg-tools (>= 0.11),
                dpkg-dev (>= 1.17.14),
                gtk-doc-tools (>= 1.20),
