@@ -1,22 +1,9 @@
 #!/usr/bin/make -f
 
-DEB_BUILDDIR = debian/build
-DEB_MAKE_DESTDIRSKEL = $(CURDIR)/debian/install/@FLAVOR@
-DEB_MAKE_FLAVORS = shared shared_udeb
+GNOME_MODULE = gtk+
 DISABLE_UPDATE_UPLOADERS = 1
-
-include /usr/share/cdbs/1/rules/autoreconf.mk
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/rules/utils.mk
-include /usr/share/cdbs/1/class/gnome.mk
 include /usr/share/gnome-pkg-tools/1/rules/uploaders.mk
 include /usr/share/gnome-pkg-tools/1/rules/gnome-get-source.mk
-include /usr/share/gnome-pkg-tools/1/rules/gnome-version.mk
-
-GNOME_MODULE = gtk+
-
-# Enable parallel build support
-DEB_BUILD_PARALLEL = 1
 
 # Ensure the build aborts when there are still references to undefined symbols
 # currently fails at least in the im-multipress im module
@@ -57,15 +44,12 @@ EXAMPLES_PKG := gtk-$(APIVER)-examples
 NEWS := NEWS$(shell find -maxdepth 1 -size +4k -name NEWS -exec echo ".gz" \;)
 README := README$(shell find -maxdepth 1 -size +4k -name README -exec echo ".gz" \;)
 
-FAIL_MISSING :=
+override_dh_missing:
+	dh_missing --sourcedir=debian/install/udeb --list-missing -X.la
+	dh_missing --sourcedir=debian/install/deb --list-missing -X.la
 
-# When building all packages, run dh_install with --fail-missing
-binary: FAIL_MISSING=--fail-missing
-
-DEB_DH_INSTALL_ARGS += --sourcedir=debian/install/shared $(FAIL_MISSING) -X.la
-DEB_DH_INSTALL_ARGS_$(UDEB_PKG) += --sourcedir=debian/install/shared_udeb
-
-DEB_DH_AUTORECONF_ARGS = "NOCONFIGURE=true ./autogen.sh"
+override_dh_autoreconf:
+	dh_autoreconf "NOCONFIGURE=true ./autogen.sh"
 
 DEB_CONFIGURE_EXTRA_FLAGS = \
 			--libdir=/$(LIBDIR) \
@@ -105,6 +89,35 @@ DEB_CONFIGURE_FLAGS_shared_udeb = \
 			--disable-xfixes \
 			--disable-xrandr
 
+%:
+	dh $@ --with gir
+
+override_dh_auto_configure: debian/control
+	dh_auto_configure \
+		--builddirectory=debian/build/deb \
+		-- \
+		$(DEB_CONFIGURE_EXTRA_FLAGS) \
+		$(DEB_CONFIGURE_FLAGS_shared) \
+		$(NULL)
+	dh_auto_configure \
+		--builddirectory=debian/build/udeb \
+		-- \
+		$(DEB_CONFIGURE_EXTRA_FLAGS) \
+		$(DEB_CONFIGURE_FLAGS_shared_udeb) \
+		$(NULL)
+
+override_dh_auto_test:
+	# Remove LD_PRELOAD so we don't run with fakeroot, which makes dbus-related tests fail
+	env -u LD_PRELOAD dh_auto_test --builddirectory=debian/build/deb -- -k check -j1
+
+override_dh_auto_install:
+	dh_auto_install --builddirectory=debian/build/udeb --destdir=debian/install/udeb
+	dh_auto_install --builddirectory=debian/build/deb --destdir=debian/install/deb
+
+override_dh_install:
+	dh_install -p$(UDEB_PKG) --sourcedir=debian/install/udeb
+	dh_install --remaining-packages --sourcedir=debian/install/deb
+
 # Avoid test failures on buildd environments
 export HOME=$(CURDIR)/debian/build
 export XDG_RUNTIME_DIR=$(HOME)
@@ -119,14 +132,15 @@ unexport XDG_DATA_HOME
 # Get failing tests' stdout/err so we have some information when a build fails
 export VERBOSE=1
 
-DEB_MAKE_CHECK_TARGET = -k check
-DEB_INSTALL_DOCS_ALL = AUTHORS
-DEB_INSTALL_DOCS_$(COMMON_PKG) = README NEWS
-DEB_INSTALL_DOCS_$(DOC_PKG) += -X.in
-DEB_DH_MAKESHLIBS_ARGS_ALL += -X$(MODULES_BASE_PATH)
-DEB_DH_MAKESHLIBS_ARGS_$(SHARED_PKG) += -V --add-udeb=$(UDEB_PKG) -- -c4
-DEB_DH_MAKESHLIBS_ARGS_libgail-3-0 += -V -- -c4
-DEB_DH_FIXPERMS_ARGS_ALL += -X$(LIBDIR)/$(SHARED_PKG)
+override_dh_installdocs:
+	dh_installdocs -p$(COMMON_PKG) AUTHORS README NEWS
+	dh_installdocs -p$(DOC_PKG) AUTHORS -X.in
+	dh_installdocs --remaining-packages -A AUTHORS
+
+override_dh_makeshlibs:
+	dh_makeshlibs -p$(SHARED_PKG) -V --add-udeb=$(UDEB_PKG) -X$(MODULES_BASE_PATH) -- -c4
+	dh_makeshlibs -plibgail-3-0 -V -- -c4
+	dh_makeshlibs --remaining-packages -X$(MODULES_BASE_PATH)
 
 # macro computing the list of 'debian/<pkg>.*" files which have a
 # corresponding ".in" file; pass the list of packages in $(1)
@@ -156,14 +170,15 @@ debian/%: debian/%.in
 		-e "s#@README@#$(README)#g" \
 		$@.in > $@
 
-clean:: debian/control
+override_dh_clean: debian/control
 	# gross kludge to force control generation with the %.in target
 	touch debian/control.in
 	rm -f $(call dh_subst_files,$(DEB_ALL_PACKAGES))
 	rm -f testsuite/reftests/*.ui.known_fail
 	rm -rf debian/build debian/install
+	dh_clean
 
-pre-build::
+override_dh_auto_build:
 	# Mark reftests with known failures as non-fatal
 	touch testsuite/reftests/nonresizable-size.ui.known_fail
 	touch testsuite/reftests/window-show-contents-on-map.ui.known_fail
@@ -173,7 +188,13 @@ pre-build::
 	mkdir -p debian/build/glib-2.0/schemas/
 	cp gtk/org.gtk.* debian/build/glib-2.0/schemas/
 	glib-compile-schemas debian/build/glib-2.0/schemas/
+	dh_auto_build --builddirectory=debian/build/deb
+	dh_auto_build --builddirectory=debian/build/udeb
 
+DEB_INDEP_PACKAGES = $(shell dh_listpackages -i)
+DEB_ARCH_PACKAGES = $(shell dh_listpackages -a)
+DEB_ALL_PACKAGES = $(shell dh_listpackages)
 # Add dependencies to generate files from the debian/*.in ones
-build-indep: $(call dh_subst_files,$(DEB_INDEP_PACKAGES))
-build-arch: $(call dh_subst_files,$(DEB_ARCH_PACKAGES))
+override_dh_auto_build-indep: $(call dh_subst_files,$(DEB_INDEP_PACKAGES))
+override_dh_auto_build-arch: $(call dh_subst_files,$(DEB_ARCH_PACKAGES))
+override_dh_auto_build: $(call dh_subst_files,$(DEB_ALL_PACKAGES))
