@@ -1,6 +1,8 @@
 gtk+3.0 (3.22.20-2) UNRELEASED; urgency=medium
 
   * Bump to debhelper compat 10.
+  * Switch from CDBS to dh.
+    Only regression is that we don't run --fail-missing on arch:all builds.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Sat, 09 Sep 2017 15:13:57 +0200
 
